# Genesis

./: .gitignore  README.md
Codex/CheatSheets/: NeoVim.md  NeoVim.txt  WSL.md  WSL.txt
Codex/Marketplaces/: DigiKey.md  GStructure.md
Factory/Recycler/: CMakeLists.txt  README.md
Factory/Recycler/src/: main.cpp
